<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="#FDFBFD"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_others"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/ll_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/_10sdp">


            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:src="@drawable/setting"
                app:tint="@color/dark_grey" />

            <TextView
                android:id="@+id/settings_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/settings_en"
                android:textColor="#000"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:background="@color/grey" />


        <LinearLayout
            android:id="@+id/ll_aboutus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/_10sdp">


            <ImageView
                app:tint="@color/dark_grey"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:src="@drawable/navi_info" />

            <TextView
                android:id="@+id/about_us_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/about_us_en"
                android:textColor="#000"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:background="@color/grey" />
        <LinearLayout
            android:id="@+id/ll_faq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/_10sdp">


            <ImageView
                app:tint="@color/dark_grey"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:src="@drawable/question" />

            <TextView
                android:id="@+id/faq_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/faq_s_amp_tutorials_en"
                android:textColor="#000"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:background="@color/grey" />
        <LinearLayout
            android:id="@+id/ll_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/_10sdp">


            <ImageView
                app:tint="@color/dark_grey"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:src="@drawable/call_icon" />

            <TextView
                android:id="@+id/contact_us_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/contact_us_en"
                android:textColor="#000"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:background="@color/grey" />
        <LinearLayout
            android:id="@+id/ll_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/_10sdp">


            <ImageView
                app:tint="@color/dark_grey"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:src="@drawable/feedback" />

            <TextView
                android:id="@+id/feedback_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/feedback_en"
                android:textColor="#000"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:background="@color/grey" />

        <LinearLayout
            android:id="@+id/ll_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/_10sdp">


            <ImageView
                app:tint="@color/dark_grey"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:src="@drawable/share_new_icon" />

            <TextView
                android:id="@+id/refer_the_app_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/refer_the_app_en"
                android:textColor="#000"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:background="@color/grey" />

        <LinearLayout
            android:id="@+id/ll_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/_10sdp">


            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:src="@drawable/star" />

            <TextView
                android:id="@+id/rate_us_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/rate_us_en"
                android:textColor="#000"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:background="@color/grey" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:background="@color/grey" />

        <FrameLayout
            android:id="@+id/framelayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</layout>