<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- <data>

     </data>-->

    <LinearLayout
        android:id="@+id/ll_login"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Activity.LoginActivity">



        <include
            android:id="@+id/tool_bar"
            layout="@layout/toolbar_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_20sdp"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:visibility="visible">


            <TextView
                android:id="@+id/enter_mobile_tv"
                style="@style/Theme.AppCompat.Light.NoActionBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_10sdp"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:text="@string/enter_your_mobile_number_en"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edit_text_border"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_12sdp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/country_code_tx"
                        style="@style/Theme.AppCompat.Light.NoActionBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center"
                        android:paddingHorizontal="@dimen/_5sdp"
                        android:text="+91"
                        android:textSize="@dimen/_13sdp" />

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_10sdp"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:visibility="invisible" />
                </RelativeLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/dark_grey" />

                <EditText
                    android:id="@+id/mobile_ed_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:background="@null"
                    android:textCursorDrawable="@color/app_color"
                    android:hint="@string/mobile_number_en"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_regular"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textSize="@dimen/_13sdp" />
            </LinearLayout>

            <TextView
                android:id="@+id/agree_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/by_continuing_you_agree_to_our_en"
                android:textSize="14sp" />

            <TextView
                style="@style/Theme.AppCompat.Light.NoActionBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:autoLink="web"
                android:id="@+id/terms_and_conditions_tv"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/terms_amp_conditions_en"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/verify_but"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:background="@drawable/bt_background"
                android:gravity="center"
                android:fontFamily="@font/poppins_semibold"
                android:paddingVertical="@dimen/_9sdp"
                android:text="Continue"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />


        </LinearLayout>
    </LinearLayout>
</layout>