<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

   <!-- <data>

    </data>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".Activity.OTPActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/verification_code_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_60sdp"
                android:text="@string/verification_code_en"
                android:textAppearance="@android:style/TextAppearance.Large"
                style="@style/Theme.AppCompat.Light.NoActionBar"
                android:textSize="@dimen/_16sdp" />



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="+91"
                    style="@style/Theme.AppCompat.Light.NoActionBar"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/pin_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="+91 9999999999"
                     style="@style/Theme.AppCompat.Light.NoActionBar"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

<!--                <com.vm.news2day.PinEntryEditText-->
<!--                    android:id="@+id/txt_pin_entry"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:cursorVisible="false"-->
<!--                    android:digits="1234567890"-->
<!--                    android:inputType="number"-->
<!--                    android:maxLength="4"-->
<!--                    android:textIsSelectable="false"-->
<!--                    android:imeOptions="actionDone"-->
<!--                    android:textSize="@dimen/_13sdp" />-->

                <TextView
                    android:id="@+id/enter_otp_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_otp_en"
                    android:layout_gravity="left"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/montserrat_regular"/>
                <com.chaos.view.PinView
                    android:id="@+id/txt_pin_entry"
                   style="@style/PinWidget.PinView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:cursorVisible="true"
                    android:inputType="number"
                    android:textColor="@color/app_color"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:cursorColor="@color/app_color"
                    app:cursorWidth="2dp"
                    app:hideLineWhenFilled="false"
                    app:itemCount="4"
                    app:itemHeight="48dp"
                    app:itemRadius="4dp"
                    app:itemSpacing="20dp"
                    app:itemWidth="48dp"
                    app:lineColor="@color/dark_grey"
                    app:lineWidth="2dp"
                    app:viewType="rectangle" />


                <TextView
                    android:id="@+id/tv_resend"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/resend_en"
                    android:textSize="@dimen/_12sdp"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/otp_submit_but"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_60sdp"
                android:background="@drawable/bt_background"
                android:gravity="center"
                android:paddingVertical="@dimen/_14sdp"
                android:text="@string/log_in_en"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />


        </LinearLayout>
    </LinearLayout>
</layout>